SERVER-72110: Use collection cursor directly instead of DBDirectClient